--- a/Resources/translations/messages.en.yaml
+++ b/Resources/translations/messages.en.yaml
@@ -15,30 +15,30 @@ Compliance: null
 '(POLICY NOT FOUND!)': null
 'Legal notice': null
 Close: null
-'Enter your text by overriding the <em>%s</em> template file.': null
+'Enter your text by overriding the <em>%s%</em> template file.': null
 'Site policies': null
-'%s accepted': null
-'%s not accepted.': null
-'''%s accepted.': null
+'%s% accepted': null
+'%s% not accepted.': null
+'''%s% accepted.': null
 'Minimum age': null
-'Confirmed minimum age requirement (%s years of age) met.': null
+'Confirmed minimum age requirement (%s% years of age) met.': null
 'Minimum age requirement not confirmed.': null
-'%s accepted.': null
+'%s% accepted.': null
 'Policy not accepted.': null
 Accepted.: null
 'Not accepted.': null
-'Trade conditions for %s': null
-'Cancellation right policy for %s': null
+'Trade conditions for %s%': null
+'Cancellation right policy for %s%': null
 'Policy not available': null
 'The selected policy is not available.': null
-'Privacy policy for %s': null
-'Terms of use for %s': null
+'Privacy policy for %s%': null
+'Terms of use for %s%': null
 'In order to log in you must accept this site\''s policies. If you have accepted the site\''s policies in the past, then they have been updated and we ask that you review the changes.': null
 'If you leave this page without successfully accepting the policies, then you will not be logged in.': null
 Cancel: null
 'Cancel and logout': null
-'Accessibility statement for %s': null
-'Legal notice for %s': null
+'Accessibility statement for %s%': null
+'Legal notice for %s%': null
 'Check this box to indicate your acceptance of this site''s policies.': null
 Policies: null
 'Notice: This setting resets the acceptance of the site policies for all users in this group. Next time they want to log-in, they will have to acknowledge their acceptance of them again, and will not be able to log-in if they do not. This action does not affect the main administrator account. You can perform the same operation for individual users by visiting the Users manager in the site admin panel.': null
