--- a/Resources/translations/zikulalegalmodule.en.yaml
+++ b/Resources/translations/zikulalegalmodule.en.yaml
@@ -1,7 +1,7 @@
-'Please click on the following links to read the corresponding documents.': null
-'Terms of use': null
-'Privacy policy': null
-'You need to be %s% years of age or older, in accordance with our minimum age requirement.': null
-'General terms and conditions of trade': null
-'Cancellation right policy': null
-'Site policies': null
+'Please click on the following links to read the corresponding documents.': 'Please click on the following links to read the corresponding documents.'
+'Terms of use': 'Terms of use'
+'Privacy policy': 'Privacy policy'
+'You need to be %s% years of age or older, in accordance with our minimum age requirement.': 'You need to be %s% years of age or older, in accordance with our minimum age requirement.'
+'General terms and conditions of trade': 'General terms and conditions of trade'
+'Cancellation right policy': 'Cancellation right policy'
+'Site policies': 'Site policies'
